fix .modal-open shifting content left

--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -27,3 +27,7 @@ body {
 .modal-title {
   font-family: $font-family-lobster;
 }
+
+.modal-open {
+  padding-right: 0 !important;
+}
